@@ -4,7 +4,6 @@ import com.t09g01.projeto.model.Position;
 import com.t09g01.projeto.model.menu.Entry;
 import com.t09g01.projeto.model.menu.Menu;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class Credits extends Menu {
@@ -14,6 +13,6 @@ public class Credits extends Menu {
 
         Entry returning = new Entry(returnPosition, Entry.TYPE.RETURN_MENU);
 
-        return Arrays.asList(returning);
+        return List.of(returning);
     }
 }
